Made improvements to assignment 2.

--- a/assignment-2.html
+++ b/assignment-2.html
@@ -20,7 +20,8 @@
     .box--1 {
       height: 300px;
       width: 50%;
-      display: inline-block;
+      /* display: inline-block; */
+      display: none;
     }
 
     .box--2 {
@@ -30,7 +31,7 @@
       transition: all .4s;
     }
 
-    .box--2:hover {
+    div:last-of-type:hover {
       width: 25%;
       height: 300px;
       background: #b7e855;         
