--- a/packages/index.html
+++ b/packages/index.html
@@ -15,25 +15,44 @@
   <div class="backdrop"></div>
   <div class="background"></div>
   <header class="main-header">
-      <div>
-        <a href="../index.html" class="main-header__brand">
-          <img src="../img/uhost-icon.png" alt="uHost - Your favorite hosting company.">
-        </a>
-      </div>
-      <nav class="main-nav">
-        <ul class="main-nav__items">
-          <li class="main-nav__item">
-            <a href="index.html">Packages</a>
-          </li>
-          <li class="main-nav__item">
-            <a href="../customers/index.html">Customers</a>
-          </li>
-          <li class="main-nav__item main-nav__item--cta">
-            <a href="../start-hosting/index.html">Start Hosting</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
+    <div>
+      <button class="toggle-button">
+        <span class="toggle-button__bar"></span>
+        <span class="toggle-button__bar"></span>
+        <span class="toggle-button__bar"></span>
+      </button>
+      <a href="../index.html" class="main-header__brand">
+        <img src="../img/uhost-icon.png" alt="uHost - Your favorite hosting company.">
+      </a>
+    </div>
+    <nav class="main-nav">
+      <ul class="main-nav__items">
+        <li class="main-nav__item">
+          <a href="index.html">Packages</a>
+        </li>
+        <li class="main-nav__item">
+          <a href="../customers/index.html">Customers</a>
+        </li>
+        <li class="main-nav__item main-nav__item--cta">
+          <a href="../start-hosting/index.html">Start Hosting</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+
+  <nav class="mobile-nav">
+    <ul class="mobile-nav__items">
+      <li class="mobile-nav__item">
+        <a href="index.html">Packages</a>
+      </li>
+      <li class="mobile-nav__item">
+        <a href="../customers/index.html">Customers</a>
+      </li>
+      <li class="mobile-nav__item mobile-nav__item--cta">
+        <a href="../start-hosting/index.html">Start Hosting</a>
+      </li>
+    </ul>
+  </nav>
 
   <main>
     <section class="package" id="plus">
@@ -41,7 +60,8 @@
         <h1 class="package__title">Our PLUS Plan</h1>
         <h2 class="package__badge">RECOMMENDED</h2>
         <h2 class="package__subtitle">The most popular choice of our customers.</h2>
-        <p class="package__info">Benefit from increased storage and faster support to ensure that your mission-critical data and applications are always available!</p>
+        <p class="package__info">Benefit from increased storage and faster support to ensure that your mission-critical data and applications are
+          always available!</p>
       </a>
     </section>
     <section class="package" id="free">
@@ -73,6 +93,8 @@
       </ul>
     </nav>
   </footer>
+
+  <script src="../shared.js"></script>
 </body>
 
 </html>
