--- a/start-hosting/index.html
+++ b/start-hosting/index.html
@@ -80,7 +80,7 @@
         <a href="#">Terms &amp; Conditions</a>
       </label>
       
-      <button type="submit" class="button">Sign Up</button>
+      <button type="submit" class="button" disabled>Sign Up</button>
     </form>
   </main>
 
